# MeshHashingDTSDF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_modules/: FindCapnp.cmake
config/: ICL.yml  PKU.yml  SUN3D.yml  SUN3D_ORIGINAL.yml  TUM1.yml  TUM2.yml  TUM3.yml  args.yml
scripts/: debug.py  decompose_mc.py  generate_tables.py  generate_voxel_neighbors.py  mc_plot.py  optirun_gdb.sh  plot_tsdf_slice.py
src/: math_functions.hpp
src/app/: orb_slam2.cc  reconstruction.cc  slam.cc  utils.h
src/core/: block.h  block_array.cu  block_array.h  collect_block_array.cu  collect_block_array.h  common.h  cuda_memory_heap.cu  cuda_memory_heap.h  directional_tsdf.cu  directional_tsdf.h  entry_array.h  functions.h  hash_entry.h  hash_table.cu  hash_table.h  mesh.cu  mesh.h  params.h  vertex.h  voxel.h
src/engine/: logging_engine.cc  logging_engine.h  main_engine.cc  main_engine.h  visualizing_engine.cc  visualizing_engine.h
src/geometry/: geometry_helper.h  isosurface_intersection.h  spatial_query.h  voxel_query.h
src/io/: block_serialization.capnp  block_serialization.capnp.c++  block_serialization.capnp.h  config_manager.cc  mesh_writer.cc
src/localizing/: point_to_psdf.cu  point_to_psdf.h
src/mapping/: allocate.cu  allocate.h  block_traversal.hpp  recycle.cu  recycle.h  update_bayesian.cu  update_bayesian.h  update_raycasting.cu  update_raycasting.h  update_simple.cu  update_simple.h  voxel_traversal.hpp  weight_functions.h
src/meshing/: marching_cubes.cu  marching_cubes.h  marching_cubes_directional.cu  marching_cubes_directional.h  mc_tables.h
src/optimize/: linear_equations.cu
src/sensor/: preprocess.cu  preprocess.h  rgbd_data_provider.cc  rgbd_data_provider.h  rgbd_sensor.cu  rgbd_sensor.h
src/util/: debugging.hpp
src/visualization/: colorize.cu  ray_caster.cu  ray_caster.h
test/: CMakeLists.txt  test_block_traversal.cpp  test_voxel_traversal.cpp
